--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "homepage": "https://github.com/hd-genius/any-viewer#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
-    "gulp-cli": "^2.3.0"
+    "gulp-clean-css": "^4.3.0",
+    "gulp-cli": "^2.3.0",
+    "gulp-htmlmin": "^5.0.1",
+    "webpack": "^5.81.0",
+    "webpack-stream": "^7.0.0"
   }
 }
