--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "gulp"
+    "build": "gulp",
+    "format": "prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,10 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
     "gulp-htmlmin": "^5.0.1",
+    "hdgenius-prettier-config": "^1.0.0",
+    "prettier": "^2.8.8",
     "webpack": "^5.81.0",
     "webpack-stream": "^7.0.0"
-  }
+  },
+  "prettier": "hdgenius-prettier-config"
 }
