--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "scripts": {
         "test": "jest",
+        "clean": "gulp clean",
         "build": "gulp",
         "format": "prettier . --write",
         "serve": "gulp serve"
@@ -25,6 +26,7 @@
     "devDependencies": {
         "browser-sync": "^2.29.1",
         "gulp": "^4.0.2",
+        "gulp-clean": "^0.4.0",
         "gulp-clean-css": "^4.3.0",
         "gulp-cli": "^2.3.0",
         "gulp-htmlmin": "^5.0.1",
