--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "gulp-htmlmin": "^5.0.1",
         "hdgenius-prettier-config": "^1.0.0",
         "prettier": "^2.8.8",
+        "raw-loader": "^4.0.2",
         "webpack": "^5.81.0",
         "webpack-stream": "^7.0.0"
     },
