--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "gulp-clean-css": "^4.3.0",
         "gulp-cli": "^2.3.0",
         "gulp-htmlmin": "^5.0.1",
+        "gulp-rename": "^2.0.0",
         "hdgenius-prettier-config": "^1.0.0",
         "prettier": "^2.8.8",
         "raw-loader": "^4.0.2",
