--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "hdgenius-prettier-config": "^1.0.0",
         "prettier": "^2.8.8",
         "raw-loader": "^4.0.2",
+        "style-loader": "^3.3.2",
         "webpack": "^5.81.0",
         "webpack-stream": "^7.0.0"
     },
