--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "browser-sync": "^2.29.1",
         "css-loader": "^6.7.3",
+        "file-loader": "^6.2.0",
         "gulp": "^4.0.2",
         "gulp-clean": "^0.4.0",
         "gulp-clean-css": "^4.3.0",
