--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "devDependencies": {
         "browser-sync": "^2.29.1",
         "css-loader": "^6.7.3",
-        "file-loader": "^6.2.0",
         "gulp": "^4.0.2",
         "gulp-clean": "^0.4.0",
         "gulp-clean-css": "^4.3.0",
@@ -37,6 +36,7 @@
         "prettier": "^2.8.8",
         "raw-loader": "^4.0.2",
         "style-loader": "^3.3.2",
+        "url-loader": "^4.1.1",
         "webpack": "^5.81.0",
         "webpack-stream": "^7.0.0"
     },
